valid sale house 1

--- a/src/main/webapp/seller/home.xhtml
+++ b/src/main/webapp/seller/home.xhtml
@@ -24,7 +24,7 @@
             <b:panel look="default" title="存量房交易备案" collapsible="false">
                 <b:listLinks>
 
-                    <b:navLink href="#{request.contextPath}/erp/hr/employeeList.xhtml" value="交易挂牌"
+                    <b:navLink href="#{request.contextPath}/seller/apply/houseValid.xhtml" value="交易挂牌"
                                iconAwesome="ticket" />
 
 
