--- a/src/main/webapp/seller/apply/houseValid.xhtml
+++ b/src/main/webapp/seller/apply/houseValid.xhtml
@@ -52,7 +52,7 @@
 
                 <b:messages globalOnly="false" styleClass="top-messages"/>
 
-                <b:inputText label="权证编号" renderLabel="true"  value="#{houseValid.houseValidInfo.powerCardNumber}"
+                <b:inputText label="权证编号" renderLabel="true"  value="#{houseValidInfo.powerCardNumber}"
                              required="true">
                 </b:inputText>
                 <b:message tooltip="true"/>
@@ -64,61 +64,68 @@
 
 
                     <div class="form-checkbox">
-                    <b:radiobutton ajax="true" update="valid_radio_panel" converter="omnifaces.GenericEnumConverter" value="#{houseValid.houseValidInfo.validType}" process="@this" itemLabel="测绘标识" itemValue="MBBH_NUMBER" display="inline"/>
+                    <b:radiobutton ajax="true" update="valid_radio_panel" converter="omnifaces.GenericEnumConverter" value="#{houseValidInfo.validType}" process="@this" itemLabel="测绘标识" itemValue="MBBH_NUMBER" display="inline"/>
                     <b:iconAwesome name="map"/>
                     <span class="note">
                         测绘部门为房屋编制的标识由图号、丘号、幢号、房号组成. 你可以在你的产权证中找到此标识.
                     </span>
 
-                    <p:outputPanel layout="block" styleClass="upgrade-upsell" rendered="#{houseValid.houseValidInfo.validType eq 'MBBH_NUMBER'}">
+
+                    <p:outputPanel layout="block" styleClass="upgrade-upsell" rendered="#{houseValidInfo.validType eq 'MBBH_NUMBER'}">
                         <div class="input-group">
                             <span class="input-group-addon">图<span class="required">*</span></span>
-                            <b:inputText value="#{houseValid.houseValidInfo.mapNumber}"
-                                         required="true" renderLabel="false"
+                            <b:inputText value="#{houseValidInfo.mapNumber}"
+                                         required="true" renderLabel="false" autocomplete="false"
                                          id="mapNumberInput" label="图号" p:placeholder="图号"/>
 
                             <span class="input-group-addon">丘<span class="required">*</span></span>
-                            <b:inputText value="#{houseValid.houseValidInfo.blockNumber}" renderLabel="false"
-                                         id="blockNumberInput" required="true" label="丘号"
+                            <b:inputText value="#{houseValidInfo.blockNumber}" renderLabel="false"
+                                         id="blockNumberInput" required="true" label="丘号" autocomplete="false"
                                          p:placeholder="丘号"/>
 
                             <span class="input-group-addon">幢<span class="required">*</span></span>
-                            <b:inputText value="#{houseValid.houseValidInfo.buildNumber}" renderLabel="false"
-                                         id="buildNumberInput" required="true" label="幢号"
+                            <b:inputText value="#{houseValidInfo.buildNumber}" renderLabel="false"
+                                         id="buildNumberInput" required="true" label="幢号" autocomplete="false"
                                          p:placeholder="幢号"/>
 
                             <span class="input-group-addon">房<span class="required">*</span></span>
                             <b:inputText id="houseOrderInput" required="true" label="房号" p:placeholder="房号"
-                                         value="#{houseValid.houseValidInfo.houseNumber}" renderLabel="false"/>
+                                         autocomplete="false"
+                                         value="#{houseValidInfo.houseNumber}" renderLabel="false"/>
 
                         </div>
                     </p:outputPanel>
+
                 </div>
                 <div class="form-checkbox">
-                    <b:radiobutton ajax="true" update="valid_radio_panel" converter="omnifaces.GenericEnumConverter" value="#{houseValid.houseValidInfo.validType}" itemLabel="房屋编码" process="@this" itemValue="HOUSE_CODE" display="inline"/>
+                    <b:radiobutton ajax="true" update="valid_radio_panel" converter="omnifaces.GenericEnumConverter" value="#{houseValidInfo.validType}" itemLabel="房屋编码" process="@this" itemValue="HOUSE_CODE" display="inline"/>
                     <b:iconAwesome name="tag"/>
                     <span class="note">
                         房产管理部门为房屋编制的唯一编码. 你可以在你的产权证中找到此编码.
                     </span>
 
-                    <p:outputPanel layout="block" styleClass="upgrade-upsell" rendered="#{houseValid.houseValidInfo.validType eq 'HOUSE_CODE'}">
 
-                        <b:inputText value="#{houseValid.houseValidInfo.houseCode}" required="true" placeholder="房屋编码"/>
+                    <p:outputPanel layout="block" styleClass="upgrade-upsell" rendered="#{houseValidInfo.validType eq 'HOUSE_CODE'}">
 
+                        <b:inputText value="#{houseValidInfo.houseCode}" label="房屋编码" renderLabel="false" required="true" placeholder="房屋编码"/>
+                        <b:message/>
                     </p:outputPanel>
+
 
                 </div>
                 <div class="form-checkbox">
-                    <b:radiobutton ajax="true" update="valid_radio_panel"  converter="omnifaces.GenericEnumConverter" value="#{houseValid.houseValidInfo.validType}" itemLabel="不动产单元号" process="@this" itemValue="UNIT_NUMBER" display="inline"/>
+                    <b:radiobutton ajax="true" update="valid_radio_panel"  converter="omnifaces.GenericEnumConverter" value="#{houseValidInfo.validType}" itemLabel="不动产单元号" process="@this" itemValue="UNIT_NUMBER" display="inline"/>
                     <b:iconAwesome name="cubes"/>
                     <span class="note">
                         不动产登记部门为不动产编制的唯一编码. 你可以在你的不动产权证中找到此编码.
                     </span>
-                    <p:outputPanel layout="block" styleClass="upgrade-upsell" rendered="#{houseValid.houseValidInfo.validType eq 'UNIT_NUMBER'}">
 
-                        <b:inputText value="#{houseValid.houseValidInfo.unitNumber}" required="true" placeholder="不动产单元号"/>
+                    <p:outputPanel layout="block" styleClass="upgrade-upsell" rendered="#{houseValidInfo.validType eq 'UNIT_NUMBER'}">
 
+                        <b:inputText value="#{houseValidInfo.unitNumber}" label="不动产单元号" renderLabel="false" required="true" placeholder="不动产单元号"/>
+                        <b:message/>
                     </p:outputPanel>
+
 
                 </div>
                 </p:outputPanel>
@@ -130,7 +137,7 @@
                     <ui:param name="_person" value="#{houseValid.houseValidInfo}"/>
                     <ui:param name="allowCredentialsTypeList" value="#{allCredentialsTypes}"/>
 
-                    <b:inputText value="#{houseValid.houseValidInfo.tel}" required="true" label="联系电话" renderLabel="true"/>
+                    <b:inputText value="#{houseValidInfo.tel}" required="true" label="联系电话" renderLabel="true"/>
                     <b:message/>
                 </ui:decorate>
 
