--- a/src/main/webapp/seller/home.xhtml
+++ b/src/main/webapp/seller/home.xhtml
@@ -21,7 +21,7 @@
 
         </b:column>
         <b:column colMd="3" ng:role="main">
-            <b:panel look="default" title="存量房交易备案" collapsible="false">
+            <b:panel look="default" title="#{attrUser.groupName}" collapsible="false">
                 <b:listLinks>
 
                     <b:navLink href="#{request.contextPath}/seller/apply/houseValid.xhtml" value="交易挂牌"
