valid sale house 1

--- a/src/main/webapp/seller/apply/houseSellInfo.xhtml
+++ b/src/main/webapp/seller/apply/houseSellInfo.xhtml
@@ -18,6 +18,16 @@
         <h:outputScript library="bootstrap-select" name="js/i18n/defaults-zh_CN.min.js"/>
     </ui:define>
 
+    <h:outputStylesheet>
+        .bootstrap-tagsinput{
+            width: 100%;
+        }
+
+        .bootstrap-tagsinput input{
+            width: 100%;
+        }
+    </h:outputStylesheet>
+
     <h:form id="houes-valid"  styleClass="page-form">
         <b:row>
             <b:column offsetLg="2" offsetMd="2" offsetSm="1" offsetXs="0" colLg="8" colMd="8" colSm="10" colXs="12">
@@ -50,23 +60,37 @@
 
 
                 <div class="Subhead mt-3 mb-5">
-                    <h2 class="Subhead-heading">#{houseValid.houseSaleInfo.address}</h2>
+                    <h2 class="Subhead-heading">#{houseSourceHome.instance.houseSaleInfo.address}</h2>
                     <p class="Subhead-description">
                         请如实填写房屋销售挂牌信息
                     </p>
                 </div>
 
-                <b:inputText value="#{houseValid.houseSaleInfo.title}" label="挂牌标题" placeholder="挂牌显示的标题" required="true"/>
+                <b:inputText value="#{houseSourceHome.instance.saleTitle}" label="房源标题" placeholder="不会显示在挂牌信息中" required="true"/>
                 <b:message/>
 
-                <b:inputText value="#{houseValid.houseSaleInfo.saleTitle}" label="房源标题" placeholder="不会显示在挂牌信息中" required="true"/>
+                <b:inputText value="#{houseSourceHome.instance.houseSaleInfo.title}" label="挂牌标题" placeholder="挂牌显示的标题" required="true"/>
                 <b:message/>
 
-                <b:inputTextarea value="#{houseValid.houseSaleInfo.description}" label="描述" />
+                <b:inputText tags="true" value="#{houseSourceHome.instance.houseSaleInfo.tags}" placeholder="房源标签" style="width:100%"/>
                 <b:message/>
 
-                <b:inputTextarea value="#{houseValid.houseSaleInfo.environment}" label="环境"/>
+                <b:inputTextarea value="#{houseSourceHome.instance.houseSaleInfo.description}" label="描述" />
                 <b:message/>
+
+                <b:inputTextarea value="#{houseSourceHome.instance.houseSaleInfo.environment}" label="环境"/>
+                <b:message/>
+
+                <b:selectMultiMenu nonSelectedText="请选择房屋朝向" numberDisplayed="9" value="#{houseSourceHome.instance.houseSaleInfo.direction}" label="朝向" id="typeID" required="true">
+                    <f:selectItem itemLabel="东" itemValue="东"/>
+                    <f:selectItem itemLabel="东南" itemValue="东南"/>
+                    <f:selectItem itemLabel="南" itemValue="南"/>
+                    <f:selectItem itemLabel="西南" itemValue="西南"/>
+                    <f:selectItem itemLabel="西" itemValue="西"/>
+                    <f:selectItem itemLabel="西北" itemValue="西北"/>
+                    <f:selectItem itemLabel="北" itemValue="北"/>
+                    <f:selectItem itemLabel="东北" itemValue="东北"/>
+                </b:selectMultiMenu>
 
 
                 <div class="form-group">
@@ -74,38 +98,49 @@
                         区域
                     </label>
                 <div class="input-group">
-                    <span class="input-group-addon">室<span class="required">*</span></span>
-                <h:selectOneMenu styleClass="selectpicker from-control edit-select" value="#{houseValid.houseSaleInfo.localArea}" label="销售区域" >
-                    <f:selectItems value="#{houseValid.saleLocalAreaList}" var="_area" itemLabel="#{_area.name}" itemValue="#{_area.id}"/>
-                    <f:selectItem noSelectionOption="true" itemLabel="请选择"/>
+                    <span class="input-group-addon">销售区域<span class="required">*</span></span>
+                <h:selectOneMenu styleClass="selectpicker from-control edit-select" value="#{houseSourceHome.instance.houseSaleInfo.localArea}" label="销售区域" >
+                    <f:selectItems value="#{houseSourceHome.saleLocalAreaList}" var="_area" itemLabel="#{_area.name}" itemValue="#{_area.id}"/>
+                    <f:selectItem noSelectionOption="true" itemLabel="-请选择销售区域-"/>
                 </h:selectOneMenu>
-                    <span class="input-group-addon">室<span class="required">*</span></span>
-                <h:selectOneMenu styleClass="selectpicker from-control edit-select" value="#{houseValid.houseSaleInfo.schoolArea}" label="学区" >
-                    <f:selectItems value="#{houseValid.schoolAreaList}" var="_area" itemLabel="#{_area.name}" itemValue="#{_area.id}"/>
-                    <f:selectItem noSelectionOption="true" itemLabel="请选择"/>
+                    <span class="input-group-addon">学区<span class="required">*</span></span>
+                <h:selectOneMenu styleClass="selectpicker from-control edit-select" value="#{houseSourceHome.instance.houseSaleInfo.schoolArea}" label="学区" >
+                    <f:selectItems value="#{houseSourceHome.schoolAreaList}" var="_area" itemLabel="#{_area.name}" itemValue="#{_area.id}"/>
+                    <f:selectItem noSelectionOption="true" itemLabel="-请选择学区-"/>
                 </h:selectOneMenu>
                 </div>
                 </div>
 
 
                 <div class="input-group">
+                    <span class="input-group-addon">层<span class="required">*</span></span>
+                    <b:inputText value="#{houseSourceHome.instance.houseSaleInfo.inFloor}"
+                                 required="true" renderLabel="false" autocomplete="false" label="所在层" />
+                    <span class="input-group-addon">室<span class="required">*</span></span>
 
-                    <b:inputText value="#{houseValid.houseSaleInfo.roomCount}"
+                    <b:inputText value="#{houseSourceHome.instance.houseSaleInfo.roomCount}"
                              required="true" renderLabel="false" autocomplete="false" label="室" />
 
-                    <span class="input-group-addon">室<span class="required">*</span></span>
-                    <b:inputText value="#{houseValidInfo.blockNumber}" renderLabel="false"
-                             required="true" label="厅" autocomplete="false"/>
                     <span class="input-group-addon">厅<span class="required">*</span></span>
+                    <b:inputText value="#{houseSourceHome.instance.houseSaleInfo.livingRoom}" renderLabel="false"
+                                 required="true" label="厅" autocomplete="false"/>
+
                 </div>
 
 
                 <hr/>
 
-                <b:commandButton  action="#{houseValid.saveHouseSource}" look="success" value="保存房源">
+
+                <b:commandButton rendered="#{not houseSourceHome.idDefined}" action="#{houseValid.saveHouseSource}" look="success" value="建立房源">
                     <f:param name="cid" value="#{javax.enterprise.context.conversation.id}"/>
                 </b:commandButton>
 
+
+
+                <b:commandButton rendered="#{houseSourceHome.idDefined}" action="#{houseSaleInfoEdit.saveHouseSource}" look="success" value="保存房源">
+
+                    <f:param name="houseSaleInfoId" value="#{houseSourceHome.instance.id}"/>
+                </b:commandButton>
 
             </b:column>
 
