--- a/src/main/webapp/seller/home.xhtml
+++ b/src/main/webapp/seller/home.xhtml
@@ -31,7 +31,7 @@
                     <b:navLink styleClass="todo-disable" disabled="true" href="#" value="租赁挂牌"
                                iconAwesome="ticket" />
 
-                    <b:navLink href="#{request.contextPath}/erp/hr/employeeJoin.xhtml" value="房源管理"
+                    <b:navLink href="#{request.contextPath}/seller/houseList.xhtml" value="房源管理"
                                iconAwesome="user-plus" />
 
 
