--- a/src/main/webapp/seller/apply/houseSalePicUpload.xhtml
+++ b/src/main/webapp/seller/apply/houseSalePicUpload.xhtml
@@ -1,12 +1,40 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html
-        PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-    <title>Title</title>
-</head>
-<body>
+<?xml version='1.0' encoding='UTF-8' ?>
+<!DOCTYPE html>
+<ui:composition template="/seller/layout/pageTemplate.xhtml" xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:f="http://java.sun.com/jsf/core"
+                xmlns:b="http://bootsfaces.net/ui"
+                xmlns:o="http://omnifaces.org/ui"
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:c="http://java.sun.com/jstl/core"
+                xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
+                xmlns:ui="http://java.sun.com/jsf/facelets">
 
-</body>
-</html>
+    <h:outputStylesheet library="uploadfile" name="uploadfile.css"/>
+
+    #{attrUser.keyId}
+
+    "#{runParam.getStringParam('nginx_address')}/api/protected/put-media?uid=#{attrUser.keyId}&amp;rnd=#{serverToken.rndData}&amp;digest=#{serverToken.digest}}"
+
+
+    <div id="fileuploader">Upload</div>
+
+
+    <script>
+        $(document).ready(function()
+        {
+            $("#fileuploader").uploadFile({
+                url:"#{runParam.getStringParam('nginx_address')}/api/protected/put-media?uid=#{attrUser.keyId}&amp;rnd=#{serverToken.rndData}&amp;digest=#{serverToken.digest}}",
+                fileName:"myfile",
+                acceptFiles:"image/*"
+            });
+
+        });
+    </script>
+
+
+
+    <h:outputScript library="uploadfile" name="jquery.uploadfile.js"/>
+
+
+</ui:composition>
