--- a/src/main/webapp/seller/apply/houseSellInfo.xhtml
+++ b/src/main/webapp/seller/apply/houseSellInfo.xhtml
@@ -58,6 +58,7 @@
                     </ol>
                 </div>
 
+                <b:messages globalOnly="false" styleClass="top-messages"/>
 
                 <div class="Subhead mt-3 mb-5">
                     <h2 class="Subhead-heading">#{houseSourceHome.instance.houseSaleInfo.address}</h2>
