valid sale house 1

--- a/src/main/webapp/seller/apply/houseValid.xhtml
+++ b/src/main/webapp/seller/apply/houseValid.xhtml
@@ -133,7 +133,7 @@
                 <hr/>
 
                 <label for="cardNumber">产权人</label>
-                <ui:decorate template="/frame/PersonInput.xhtml">
+                <ui:decorate template="/frame/personInput.xhtml">
                     <ui:param name="_person" value="#{houseValid.houseValidInfo}"/>
                     <ui:param name="allowCredentialsTypeList" value="#{allCredentialsTypes}"/>
 
